--- a/style.css
+++ b/style.css
@@ -19,12 +19,15 @@ canvas {
 
 .crt-overlay {
     position: absolute;
-    top: -20%;
+    top: -15%;
     left: -10%;
     width: 150%;
     height: 130%;
     background: url('assets/crt-overlay.png') no-repeat center center;
     background-size: cover;
+    @media (max-width: 768px) {
+        display: none;
+    }
 }
 
 #gameCanvas {
@@ -32,5 +35,23 @@ canvas {
     top: 0;
     left: 0;
 }
+
+@media (max-width: 768px) {
+    body {
+        flex-direction: column;
+    }
+
+    .crt-container {
+        width: 100%;
+        height: 100%;
+    }
+
+    #gameCanvas {
+        width: 100%;
+        height: 100%;
+    }
+}
+
+
 
 
