--- a/style.css
+++ b/style.css
@@ -54,6 +54,45 @@ body.mobile #gameCanvas {
     left: 0;
 }
 
+body.mobile .container-console {
+    display: flex;
+    width: 100%;
+    height: 100%;
+}
+
+.mobile-controls {
+    position: absolute;
+    bottom: 10%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 20px;
+}
+
+.controls-left, .controls-right {
+    width: 20%;
+}
+
+
+.mobile-controls .button {
+    width: 60px;
+    height: 60px;
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 24px;
+    font-family: 'Press Start 2P', cursive;
+    color: black;
+    user-select: none;
+    touch-action: manipulation;
+}
+
+.mobile-controls .button:active {
+    background-color: rgba(255, 255, 255, 0.8);
+}
+
 
 
 
