--- a/style.css
+++ b/style.css
@@ -60,23 +60,34 @@ body.mobile .container-console {
     height: 100%;
 }
 
-.mobile-controls {
-    position: absolute;
-    bottom: 10%;
-    width: 100%;
+.controls-left {
     display: flex;
-    justify-content: space-between;
-    padding: 0 20px;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
 }
 
-.controls-left, .controls-right {
-    width: 20%;
+.controls-right {
+    display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        height: 50%;
+        margin: auto;
+        margin-left: 20px;
+        margin-right: 20px;
 }
 
+.joypad {
+    display: grid;
+    grid-template-areas:
+        ". up ."
+        "left . right"
+        ". down .";
+}
 
-.mobile-controls .button {
-    width: 60px;
-    height: 60px;
+.button {
+    width: 50px;
+    height: 50px;
     background-color: rgba(255, 255, 255, 0.5);
     border-radius: 50%;
     display: flex;
@@ -91,6 +102,26 @@ body.mobile .container-console {
 
 .mobile-controls .button:active {
     background-color: rgba(255, 255, 255, 0.8);
+}
+
+.joypad .button:active {
+    background-color: rgba(255, 255, 255, 0.8);
+}
+
+.joypad .button#up {
+    grid-area: up;
+}
+
+.joypad .button#down {
+    grid-area: down;
+}
+
+.joypad .button#left {
+    grid-area: left;
+}
+
+.joypad .button#right {
+    grid-area: right;
 }
 
 
