--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ body {
   align-items: center;
   height: 100vh;
   background-color: black;
+  flex-direction: column;
+
 }
 
 canvas {
@@ -12,68 +14,45 @@ canvas {
 }
 
 .crt-container {
-  position: relative;
-  margin-left: -15%;
-  width: 800px;
-  height: 600px;
-}
-
-.crt-overlay {
-  position: absolute;
-  top: -15%;
-  left: -10%;
-  width: 150%;
-  height: 130%;
-  background: url("assets/crt-overlay.png") no-repeat center center;
-  background-size: cover;
-}
-
-body.mobile .crt-overlay {
-  display: none;
-}
-
-body.mobile {
-  flex-direction: column;
-}
-
-body.mobile .crt-container {
   width: 100%;
   height: 100%;
   margin-left: unset;
 }
 
-body.mobile #gameCanvas {
+ #gameCanvas {
   width: 100%;
   height: 100%;
 }
 
-#gameCanvas {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-body.mobile .container-console {
+.container-console {
   display: flex;
   width: 100%;
   height: 100%;
 }
 
 .controls-left {
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   margin: 10px;
 }
 
 .controls-right {
-  display: flex;
+  display: none;
   flex-direction: column;
   justify-content: space-around;
   height: 50%;
   margin: auto;
   margin-left: 20px;
   margin-right: 20px;
+}
+
+body.mobile .controls-left {
+  display: flex;
+}
+
+body.mobile .controls-right {
+  display: flex;
 }
 
 .joypad {
